test/1.3/basedocs/invalid/learning/learningContent.001.dita
<?xml version="1.0" encoding="utf-8"?>
<learningContent id="learningContent.001" shellPackage="learning" shellName="learningContent">
 <title>Learning Content</title>
 <shortdesc>The short description</shortdesc>
</learningContent>
